fix env and add ave

--- a/reton/public/css/style.scss
+++ b/reton/public/css/style.scss
@@ -555,7 +555,11 @@ button {
       display: none;
       height: 100%;
     }
+
   }
+    .ave {
+      background-image: url("/images/banner/ave.webp") !important;
+    }
   .main-content {
     padding-left: 500px;
 
