--- a/reton/public/css/responsive.css
+++ b/reton/public/css/responsive.css
@@ -109,24 +109,18 @@
     text-align: center;
   }
   .experience-area .experience-content .experience-inner ul li:nth-child(1) {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 100%;
-            flex: 0 0 100%;
+    flex: 0 0 100%;
     max-width: 100%;
     margin-bottom: 10px;
   }
   .experience-area .experience-content .experience-inner ul li:nth-child(2) {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 100%;
-            flex: 0 100%;
+    flex: 0 100%;
     max-width: 100%;
     margin-left: 0;
     margin-bottom: 10px;
   }
   .experience-area .experience-content .experience-inner ul li:nth-child(3) {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 100%;
-            flex: 0 0 100%;
+    flex: 0 0 100%;
     max-width: 100%;
     margin-left: 0;
   }
@@ -138,16 +132,12 @@
     margin-bottom: 30px;
   }
   .awards-area .awards-inner ul li:nth-child(1) {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 100%;
-            flex: 0 0 100%;
+    flex: 0 0 100%;
     max-width: 100%;
     margin-bottom: 15px;
   }
   .awards-area .awards-inner ul li:nth-child(2) {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 100%;
-            flex: 0 0 100%;
+    flex: 0 0 100%;
     max-width: 100%;
     margin-left: 0;
   }
@@ -347,8 +337,7 @@
     position: relative;
     top: 0;
     right: 0;
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   /*-- What --*/
   .what-area.two .what-item {
@@ -377,16 +366,12 @@
     text-align: left;
   }
   .blog-area.five .blog-thumb-item ul li:nth-child(1) {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 40%;
-            flex: 0 0 40%;
+    flex: 0 0 40%;
     max-width: 40%;
     text-align: center;
   }
   .blog-area.five .blog-thumb-item ul li:nth-child(2) {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 50%;
-            flex: 0 0 50%;
+    flex: 0 0 50%;
     max-width: 50%;
     margin-left: 10px;
   }
@@ -545,7 +530,6 @@
     margin-bottom: 30px;
   }
 }
-
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   /*----- Default CSS -----*/
   body {
@@ -822,8 +806,7 @@
     position: relative;
     top: 0;
     right: 0;
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   /*-- What --*/
   .what-area.two .what-item {
@@ -846,15 +829,11 @@
     text-align: left;
   }
   .blog-area.five .blog-thumb-item ul li:nth-child(1) {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 15%;
-            flex: 0 0 15%;
+    flex: 0 0 15%;
     max-width: 15%;
   }
   .blog-area.five .blog-thumb-item ul li:nth-child(2) {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 50%;
-            flex: 0 0 50%;
+    flex: 0 0 50%;
     max-width: 50%;
     margin-left: 10px;
   }
@@ -938,9 +917,7 @@
     font-size: 30px;
   }
   .blog-details-area .widget-area .recent .recent-inner ul li:nth-child(1) {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 15%;
-            flex: 0 0 15%;
+    flex: 0 0 15%;
     max-width: 15%;
   }
   /*----- End Blog Details CSS -----*/
@@ -959,7 +936,6 @@
     margin-bottom: 30px;
   }
 }
-
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .pufo-aside {
     width: 280px;
@@ -1008,8 +984,7 @@
   .banner-area.five .banner-content .banner-email {
     top: unset;
     right: unset;
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
     left: 70px;
     bottom: 48px;
   }
@@ -1028,7 +1003,6 @@
     margin-bottom: 10px;
   }
 }
-
 @media only screen and (min-width: 1800px) {
   .main-area .main-left-img {
     width: 650px;
@@ -1037,13 +1011,11 @@
     padding-left: 650px;
   }
 }
-
 @media only screen and (min-width: 2500px) {
   .navbar-light .container {
     max-width: 1475px;
   }
 }
-
 @media only screen and (max-width: 991px) {
   .banner-area.three {
     padding-top: 75px;
@@ -1063,7 +1035,6 @@
   }
   .pufo-aside .navbar-nav {
     position: inherit;
-    -webkit-transform: translateY(0%);
     transform: translateY(0%);
     margin-top: 20px;
   }
@@ -1081,10 +1052,8 @@
     font-size: 18px;
   }
 }
-
 @media only screen and (min-width: 992px) {
   .pufo-aside .collapse {
     display: block !important;
   }
-}
-/*# sourceMappingURL=responsive.css.map */
+}/*# sourceMappingURL=responsive.css.map */
